Test 2 - for some reason the first image is not covering like it should be. All code matches between sections - only doing this on netlify... Hoping this fixes

--- a/less/mainContent.less
+++ b/less/mainContent.less
@@ -142,6 +142,7 @@
           background: url(../imgs/fitness-man-tanktop.jpg) no-repeat left bottom fixed;
           background-size: cover;
           border-radius: 0;
+          width: 100%;
         }
 
         .summary, ul {
@@ -207,7 +208,7 @@
           }
         }
         @media @mobile {
-          background: url(../imgs/couple-jogging.jpg) no-repeat left bottom fixed;
+          background: url(../imgs/couple-jogging.jpg) no-repeat center bottom fixed;
           background-size: cover;
           border-radius: 0;
         }
